PA3/tests/bad/bad_if.cl
class Main {
	main() : SELF_TYPE {
		if true then 1 else a fi
	};
};